updated the third section of LGI control questions

--- a/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
+++ b/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
@@ -7,6 +7,8 @@
 
 		<meta name="author" content="Lukas Sch&ouml;rghuber"/>
 
+		<link rel="stylesheet" href="css/styles.css"/>
+
 		<title>Reich durch Angst</title>
 	</head>
 
@@ -14,16 +16,41 @@
 		<div id="impress"
 			data-transition-duration="2000">
 			
-			<div id="dTitle" class="step slide" data-x="-1000" data-y="-1500">
+			<div id="dTitle" class="step slide" data-x="0" data-y="20000">
 				<h1>Reich durch Angst</h1>
 			</div>
 
-			<div id="dDefinitionTitle" class="step slide" data-x="1000" data-y="-1500">
+			<div id="dDefinitionTitle" class="step slide" data-x="0" data-y="19000" data-scale="1">
 				<h1>Verschw&ouml;rungstheorien</h1>
 			</div>
 
-			<div id="dDefinitionExamples" class="step" data-x="1500" data-y="-2500" data-scale="1">
-				<img src="examples.png" alt="Beispiele f&uuml;r Verschw&ouml;rungstheorien"/>
+			<div id="dDefinitionExamples" class="step" data-x="2000" data-y="19000" data-scale="1">
+				<img src="img/examples.png" alt="Beispiele f&uuml;r Verschw&ouml;rungstheorien"/>
+			</div>
+
+			<div id="dMotivationDistrust" class="step" data-x="0" data-y="18000">
+				<img src="img/whyWall.jpg" alt="Glaubensgr&uuml;nde f&uuml;r Verschw&ouml;rungstheorien"/>
+			</div>
+
+			<div id="dMotivationMinority" class="step" data-x="-2000" data-y="18000">
+				<img src="img/satan.jpg" height="100%" alt="Misstrauen gegen&uuml;ber Minderheiten"/>
+			</div>
+
+			<div id="dMotivationSimplicity" class="step" data-x="2000" data-y="18000">
+				&lt;insert simple vs complex image&gt;
+			</div>
+
+			<div id="dMonetisation" class="step" data-x="0" data-y="17000">
+				<img src="img/monetization.png" alt="Monetarisierung des Glaubens"/>
+			</div>
+
+			<div id="dMonetisationKopp" class="step" data-x="-2000" data-y="17000">
+				<h1>Kopp-Verlag</h1>
+				<p>
+					5 bis 10 Millionen &euro; Umsatz<br/>
+					10.000 bis 25.000 B&uuml;cher<br/>
+					zweistelliges Wachstum
+				</p>
 			</div>
 		</div>
 
