enhanced the conspiracy theory presentation

--- a/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
+++ b/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
@@ -45,13 +45,22 @@
 			</div>
 
 			<div id="dMonetisationKopp" class="step" data-x="-2000" data-y="17000">
-				<h1>Kopp-Verlag</h1>
+				<img src="img/goldenesBrett.png" alt="Goldenes Brett f&uuml;r Lebenswerk 2014 ging an den Kopp-Verlag"/>
+			</div>
+
+			<div id="dMonetisationKoppFigures" class="step" data-x="-4000" data-y="17000">
 				<p>
 					5 bis 10 Millionen &euro; Umsatz<br/>
 					10.000 bis 25.000 B&uuml;cher<br/>
 					zweistelliges Wachstum
 				</p>
 			</div>
+
+			<div id="dMonetisationProfessionalProduction" class="step" data-x="2000" data-y="17000">
+				<img src="img/professionalProduction.jpg" alt="Professionelle Produktion der Videos"/>
+			</div>
+
+			<div id="dPyramid" class="step" data-scale="5" data-x="0" data-y="18000" data-rotate="180"></div>
 		</div>
 
 		<script type="text/javascript" src="impress.js"></script>
