--- a/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
+++ b/SPT/0_2016/conspiracyTheories/conspiracyTheories.html
@@ -17,50 +17,68 @@
 			data-transition-duration="2000">
 			
 			<div id="dTitle" class="step slide" data-x="0" data-y="20000">
-				<h1>Reich durch Angst</h1>
+				<img src="img/conspiracyTheory.png"/>
 			</div>
 
-			<div id="dDefinitionTitle" class="step slide" data-x="0" data-y="19000" data-scale="1">
+			<div id="dDefinitionTitle" class="step slide" data-x="0" data-y="18000" data-scale="1">
 				<h1>Verschw&ouml;rungstheorien</h1>
 			</div>
-
-			<div id="dDefinitionExamples" class="step" data-x="2000" data-y="19000" data-scale="1">
-				<img src="img/examples.png" alt="Beispiele f&uuml;r Verschw&ouml;rungstheorien"/>
+			<div id="dDefinitionExplanationA" class="step slide" data-x="-2000" data-y="18000" data-scale="1">
+				<img src="img/topSecret.jpg" alt="Top secret"/>
+			</div>
+			<div id="dDefinitionExplanationB" class="step slide" data-x="2000" data-y="18000" data-scale="1">
+				<img src="img/luegenpresse.jpg"/>
 			</div>
 
-			<div id="dMotivationDistrust" class="step" data-x="0" data-y="18000">
-				<img src="img/whyWall.jpg" alt="Glaubensgr&uuml;nde f&uuml;r Verschw&ouml;rungstheorien"/>
+			<div id="dDefinitionExamplesShark" class="step" data-x="1000" data-y="16000" data-scale="1">
+				<img src="img/jewishShark.jpg" alt="Finanzhai"/>
+			</div>
+			<div id="dDefinitionExamplesRightExtremism" class="step" data-x="3000" data-y="16000" data-scale="1">
+				<img src="img/rightExtremism.png" alt="Right extremism"/>
+			</div>
+			<div id="dDefinitionExamplesEbola" class="step" data-x="-1000" data-y="16000" data-scale="1">
+				<img src="img/ebolaCapitol.jpg" alt="Ebola"/>
+			</div>
+			<div id="dDefinitionExamplesChemtrail" class="step" data-x="-3000" data-y="16000" data-scale="1">
+				<img src="img/chemtrailPentagram.jpg" alt="Chemtrail pentagram"/>
 			</div>
 
-			<div id="dMotivationMinority" class="step" data-x="-2000" data-y="18000">
-				<img src="img/satan.jpg" height="100%" alt="Misstrauen gegen&uuml;ber Minderheiten"/>
-			</div>
 
-			<div id="dMotivationSimplicity" class="step" data-x="2000" data-y="18000">
-				&lt;insert simple vs complex image&gt;
-			</div>
-
-			<div id="dMonetisation" class="step" data-x="0" data-y="17000">
+			<div id="dMonetisation" class="step" data-x="0" data-y="14000">
 				<img src="img/monetization.png" alt="Monetarisierung des Glaubens"/>
 			</div>
 
-			<div id="dMonetisationKopp" class="step" data-x="-2000" data-y="17000">
-				<img src="img/goldenesBrett.png" alt="Goldenes Brett f&uuml;r Lebenswerk 2014 ging an den Kopp-Verlag"/>
+			<div id="dMotivationDistrust" class="step" data-x="-2000" data-y="14000">
+				<img src="img/whyWall.jpg" alt="Glaubensgr&uuml;nde f&uuml;r Verschw&ouml;rungstheorien"/>
+			</div>
+			<div id="dMotivationMinority" class="step" data-x="-4000" data-y="14000">
+				<img src="img/satan.jpg" height="100%" alt="Misstrauen gegen&uuml;ber Minderheiten"/>
+			</div>
+			<div id="dMotivationSimplicity" class="step" data-x="-6000" data-y="14000">
+				&lt;insert simple vs complex image&gt;
 			</div>
 
-			<div id="dMonetisationKoppFigures" class="step" data-x="-4000" data-y="17000">
+			<div id="dMonetisationKopp" class="step" data-x="2000" data-y="14000">
+				<img src="img/goldenesBrett.png" alt="Goldenes Brett f&uuml;r Lebenswerk 2014 ging an den Kopp-Verlag"/>
+			</div>
+			<div id="dMonetisationKoppFigures" class="step" data-x="4000" data-y="14000">
 				<p>
 					5 bis 10 Millionen &euro; Umsatz<br/>
 					10.000 bis 25.000 B&uuml;cher<br/>
 					zweistelliges Wachstum
 				</p>
 			</div>
-
-			<div id="dMonetisationProfessionalProduction" class="step" data-x="2000" data-y="17000">
+			<div id="dMonetisationKoppEmployees" class="step" data-x="3000" data-y="14000" data-scale="0.25">
+				<div class="containerCenter">
+					<h3>60 Mitarbeiter</h3>
+					<img src="img/koppEmployees_v0.svg" alt="60 Mitarbeiter"/>
+				</div>
+			</div>
+			<div id="dMonetisationProfessionalProduction" class="step" data-x="6000" data-y="14000">
 				<img src="img/professionalProduction.jpg" alt="Professionelle Produktion der Videos"/>
 			</div>
 
-			<div id="dPyramid" class="step" data-scale="5" data-x="0" data-y="18000" data-rotate="180"></div>
+			<div id="dPyramid" class="step" data-scale="10" data-x="0" data-y="18000" data-rotate="180"></div>
 		</div>
 
 		<script type="text/javascript" src="impress.js"></script>
